cli/src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__fragments__fragment_variables.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 6,
            column: 37,
            file: 0,
            builtin: false,
        },
        message: UnknownVariable {
            name: "b2",
        },
        additional_info: [],
    },
]
